# aws_bill_notify

./: .gitignore  .gitlab-ci.yml  README.md  assume_role.sh  cdk.json  deploy.sh  iam.yml  package-lock.json  package.json  webpack.config.js
bill_notify/: Cargo.toml  Dockerfile
bill_notify/src/: aws.rs  exchange_rate.rs  main.rs  slack.rs
bundle/nodejs/: package-lock.json  package.json
lambda/: index.ts
lib/: bill_notify_to_slack-stack.ts
lib/process/: setup.ts
process/: setup.ts
test/: bill_notify_to_slack.test.ts
