[package]
name = "bill_notify"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
anyhow = "1.0.92"
lambda_runtime = { version = "0.13.0", features = ["anyhow"] }
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["eventbridge"] }
aws-config = { version= "1.5.9", features = ["behavior-version-latest"] }
aws-sdk-costexplorer = "1.51.0"
chrono = "0.4.38"
chrono-tz = "0.10.0"
reqwest = { version = "0.12", features = ["json"] }
